--- a/style/themes/playful.css
+++ b/style/themes/playful.css
@@ -8,8 +8,26 @@
  * Font Importing
  * ==========================================================================
  */
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf') format('truetype');
+}
 
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../../fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../../fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf') format('truetype');
+}
 
 /*
  * ==========================================================================
